# llada-poe

./: README.md  benchmark_llada15.sh  benchmark_llada8b.sh  chat.py  collect_results.py  download_model.py  eval_llada.py  extract_metrics.py  generate.py  main.py  pyproject.toml  test_benchmark.sh
model/: modeling_llada.py
