[project]
name = "llada-poe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "gradio>=5.49.1",
    "lm-eval>=0.4.9",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
